--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,34 @@ html {
 body {
   margin: 0;
 }
+
+ul  {
+  margin: 0;
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-gap: 1rem;
+}
+
+li {
+  list-style: none;
+  border: 3px solid #987ffa;
+  border-radius: 6px;
+}
+
+h2 {
+  font-family: Oswald, sans-serif;
+  margin: 0;
+  color: #6f00e7;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 900;
+}
+
+ul > li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
