--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html {
   margin: 0;
 }
 
-*,*::before, *::after {
+*, *::before, *::after {
   box-sizing: inherit;
 }
 
@@ -13,7 +13,7 @@ body {
   margin: 0;
 }
 
-ul  {
+ul {
   margin: 0;
   padding: 1rem;
   display: grid;
@@ -75,12 +75,16 @@ p {
   background-color: #6f00e7;
   color: white;
   text-decoration: none;
-  padding-top: .3rem;
+  padding-top: .5rem;
   padding-bottom: .6rem;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
 
 .share {
+  align-content: flex-end;
+}
+
+.fav {
   align-content: flex-end;
 }
